Fix background jumping

--- a/src/main.scss
+++ b/src/main.scss
@@ -14,10 +14,10 @@ body {
     background-image: url("../public/media/images/metal_rolling_background.jpg");
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100%;
     height: 100%;
     left: 0;
-    position: absolute;
+    position: fixed;
     top: 0;
     width: 100%;
     z-index: -1000;    
